force-app/main/default/objects/Asset/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>Pack Component</fullName>
            </value>
            <value>
                <fullName>Bolt</fullName>
            </value>
            <value>
                <fullName>Bolt Component</fullName>
            </value>
            <value>
                <fullName>Stand Alone</fullName>
            </value>
            <value>
                <fullName>Legacy Pack</fullName>
            </value>
            <value>
                <fullName>Legacy Pack Component</fullName>
            </value>
            <value>
                <fullName>Legacy Stand Alone</fullName>
            </value>
            <value>
                <fullName>StandaloneOffering</fullName>
            </value>
            <value>
                <fullName>BundleEntry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>