force-app/main/default/objects/Asset/fields/IP_Installation_Password__c.field-meta.xml
<CustomField>
    <fullName>IP_Installation_Password__c</fullName>
    <formula>Opportunity__r.IP_Installation_Password__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Installation Password</label>
    <type>Text</type>
</CustomField>