force-app/main/default/objects/Asset/fields/X7S_Assets__c.field-meta.xml
<CustomField>
    <fullName>X7S_Assets__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>7S Assets</label>
    <referenceTo>X7S_Assets__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>